# GBOmonitoring

./: .gitignore  LICENSE.md  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build-and-pytest.yml  django.yml
.ignore/: setup.py
GBOmonitoring/: .env.template  __init__.py  asgi.py  db_routers.py  settings.py  urls.py  views.py  wsgi.py
GBOmonitoring/templates/: landing.html
GBOmonitoring/templates/dashboards/: ztilt.html
GBOmonitoring/templates/error/: error-404.html
GBOmonitoring/templates/includes/: navigation.html  sidebar.html
GBOmonitoring/templates/layouts/: base-site-fullscreen.html
GBOmonitoring/templates/prometheus/: prom_query.html
alerts/github/: .github-env  .github-env.template  core.py
alerts/jira/: .jira-env  core.py
dashboards/: apps.py  models.py  urls.py  views.py
dashboards/migrations/: 0001_initial.py  0002_alter_ossdata_table.py
dashboards/oss/: core.py
dashboards/plot/: dash.py
docs/: .docs-env.template
docs/source/: conf.py  glossary.rst  index.rst  source
docs/source/design/: alert_schema.rst  index.rst  monitoring_tree.rst  (+1 more)
prometheus/: forms.py  urls.py  views.py
prometheus/templates/: prom_query.html
woah/: README.md  __init__.py  db.sl3  manage.py  pyproject.toml
woah/alert/: urls.py  views.py
woah/data/: urls.py
woah/display/: tables.py  urls.py  views.py
woah/util/: tables.py  urls.py  views.py
woah/visualization/: apps.py  models.py  views.py
woah/woah/: .env.template  asgi.py  db_routers.py  settings.py  urls.py  wsgi.py
(+44 files in other folders)
