[tool.poetry]
name = "woah"
version = "0.1.0"
description = "The Watchdog Of Antenna Health"
authors = [
    "Victoria Catlett <vcatlett@nrao.edu>",
    "Kathlyn Purcell <vcatlett@nrao.edu>",
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coderedcms = "^3.0.2"
django-sass = "^1.1.0"
django-stubs = "^4.2.6"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-django = "^4.7.0"
ruff = "^0.1.6"
prometheus-client = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
